ingress-aws/k8s/app1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-01
spec:
  selector:
    matchLabels:
      app: app-01
  replicas: 1
  template:
    metadata:
      labels:
        app: app-01
    spec:
      containers:
      - name: app-01
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-01-svc
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: app-01
